--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.scan_import_activity.ImportFileActivity"></activity>
+        <activity android:name=".ui.scan_import_activity.ScanActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
