--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     dataBinding {
         enabled = true
-    }
-
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
     }
 
     compileSdkVersion 30
