--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
+
+        // for view binding:
+        // viewBinding = true
     }
 
     compileSdkVersion 30
