screen home: hiển thị danh sách học phần create screen learn, tạo flip card

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.co_well.quiz">
+    package="com.co_well.quiz" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -10,15 +10,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.ImportTextActivity"></activity>
+        android:theme="@style/AppTheme" >
+        <activity android:name=".ui.activity.learn.LearnActivity" >
+        </activity>
+        <activity android:name=".ui.activity.ImportTextActivity" />
         <activity android:name=".ui.activity.interf.ImportTextActivity" />
         <activity android:name=".ui.activity.create_set.CreateSetActivity" />
         <activity android:name=".ui.activity.ImportFileActivity" />
         <activity android:name=".ui.activity.ScanActivity" />
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
