--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
