--- a/data/build.gradle
+++ b/data/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'com.google.android.gms:play-services-vision:20.1.0'
+    implementation 'androidx.room:room-rxjava2:2.2.5'
 
 }
